--- a/css/news-city.css
+++ b/css/news-city.css
@@ -1,30 +1,54 @@
-
+#article-news h2{
+    margin-top: 40px;
+    font-weight: bold;
+}
 
 .news-city {
     
     display: flex;
-   
     margin: 20px;
 }
 
 .news-group {
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap:wrap;
+    justify-content: center;
     width: 575px;
+    
    
 }
 
+
+
 .card-news {
-    margin: 20px;
-    width: 175px;
-    padding: 4px;
-}
-
-.card-news img {
-    max-width : 100%;
     border-radius: 20px;
+    box-shadow: 1px 1px 10px  gray;
+    margin: 15px;
+    margin-top: 25px;
+    width: 200px;
+    height: 150px;
+    display: flex;
+    flex-direction:row;
+    align-items: flex-end;
+    justify-content: center; 
+    
 }
 
+.card-news h4 {
+    background-color: white;
+    width: 100%;
+    height: 40px;
+    font-size: bold;
+    margin-bottom: 0 ;
+    padding-top: 15px;
+    padding-left: 15px;
+    border-radius: 0 0 20px 20px;
+    
+}
+
+.big {
+    height: 352px;
+}
 .newsport  {
     
     background-image: url("../images/activites/3_medium/3medium-port.jpg");
@@ -34,6 +58,7 @@
     
     background-image: url("../images/activites/4_small/4small-fort.jpg");
     background-size: 240px;
+    height: 45%;
 }
 .newsfrioul  {
     
@@ -51,7 +76,7 @@
     background-size: 240px;
 }
 .newslongchamp  {
-    
+    height: 45%;
     background-image: url("../images/activites/4_small/4small-longchamp.jpg");
     background-size: 240px;
 }
