--- a/css/footer.css
+++ b/css/footer.css
@@ -3,6 +3,7 @@ footer {
     justify-content: space-around;
     padding-bottom: 30px;
     background-color: #F2F2F2;
+margin: 0;
 }
 
 .footer-inside  {
